# remlo

./: .env.local.example  .gitignore  AGENT_PROGRESS.md  DB_AUDIT.md  DEMO_CHECKLIST.md  GAPS.md  LICENSE  README.md  REMLO_MASTER.md  VINCENT_SETUP.md  architecture.mdx  docs.json  error.html  index.mdx  middleware.ts  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml  remlo_architecture_spec.md  remlo_build_guide.md  remlo_mpp_blueprint.md  tailwind.config.ts  test-db.js  tmp_err.txt  tmp_mpp.ts  tmp_payroll.ts  tsconfig.json  vercel.json
app/: globals.css  layout.tsx  opengraph-image.tsx  page.tsx  twitter-image.tsx
contracts/: foundry.toml
docs/: ASSISTANT.md  architecture.mdx  index.mdx  quickstart.mdx
emails/: EmployerMessage.tsx  KycApproved.tsx  KycRejected.tsx
integrations/: bridge.mdx  privy.mdx
lib/: admin-audit.ts  ai.ts  auth.ts  bridge.ts  claude.ts  constants.ts  contracts.ts  csv-mapping.ts  database.types.ts  employee-onboarding.ts  employer-onchain.ts  escrow-client.ts  escrow.ts  llm-input-sanitizer.ts  memo.ts  mpp-multirail.ts  mpp-route.ts  mpp.ts  notifications.ts  notify.ts  payment-holds.ts  privy-server.ts  privy-wallet.ts  privy.ts  reputation-tiers.test.ts  reputation-tiers.ts  reputation.ts  solana-constants.ts  solana-payroll.ts  solana-signer-adapter.ts  solana-streams.ts  solana-yield.ts  supabase-server.ts  treasury-council.ts  vincent-agent.ts  x402-multi-rail.ts  x402-solana.ts
operations/: deployment.mdx
scripts/: schema.sql  (+3 more)
solana/programs/remlo-escrow/: Cargo.toml
solana/programs/remlo-escrow/src/: lib.rs
(+393 files in other folders)
