[package]
name = "remlo-escrow"
version = "0.1.0"
description = "Remlo multi-agent escrow with LLM-judge verdict settlement"
edition = "2021"
rust-version.workspace = true

[lib]
crate-type = ["cdylib", "lib"]
name = "remlo_escrow"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
anchor-spl = "0.30.1"
